# mediapipe

./: .bazel  .gitignore  README.md  setup.py
mediapipe/graphs/hand_tracking/: BUILD  hand_tracking_desktop_live_gpu.pbtxt
mediapipe/modules/hand_landmark/: hand_landmark_tracking_gpu.pbtxt
mediapipe/python/: BUILD
mediapipe/python/solutions/: hands.py
